--- a/index.html
+++ b/index.html
@@ -15,16 +15,47 @@
 	display:inline-block;vertical-align:top;
 	}
 	.firsttext{
+		font-weight:bold;
+   		text-align:center;
+    		font-family: Microsoft JhengHei;
+   		font-size : 24px;
+    		color:#556b2f;
 	}
 	.secondtext{
+		text-align:left;
+   		color: #556b2f;
+   		font-family: Microsoft JhengHei;
+   		font-size : 16px
 	}
-	.thirdtext{
-	}
+
 </style>
 
 </head>
 <body style="margin=0px;background-color:#f5f5f5">
  	<div class="head">JMMY'S BLOG</div>
+	<p class="firsttext">&nbsp;</p>
+	<p class="firsttext">輔大竹友會</p>
+	<p class="firsttext">22屆副會長</p>
+	<p class="firsttext">就來聊聊各個活動八八八八</p>
+	<p class="secondtext">&nbsp;</p>
+	<p class="secondtext">1.輔遊</p>
+	<p class="secondtext">新生的第一個活動就是參觀輔大;</p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-4.fna.fbcdn.net/v/t1.0-9/20882100_1774420655921039_931510704321879336_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe8-4.fna&oh=f8361b857fdbbe1e201a34157991c61c&oe=5D13385C" alt="輔遊" ></p>
+	<p class="secondtext">&nbsp;</p>
+	<p class="secondtext">2.宿營</p>
+	<p class="secondtext">帶領小竹認識大家</p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.0-9/21192614_1788246057871832_5954825968258088738_n.jpg?_nc_cat=105&_nc_ht=scontent.ftpe8-1.fna&oh=3259010592b55f5b8c579496c842ac8a&oe=5D1CADF2" alt="宿營" ></p>
+	<p class="secondtext">&nbsp;</p>
+	<p class="secondtext">3.返服</p>
+	<p class="secondtext">到偏鄉教小朋友</p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t31.0-8/27710194_1972363256126777_2568034353396234249_o.jpg?_nc_cat=100&_nc_ht=scontent.ftpe8-2.fna&oh=d60d9edd9ab1cd080a885e629eab26ac&oe=5D0A761E" alt="返服" ></p>
+	<p class="secondtext">&nbsp;</p>
+	<p class="secondtext">3.幹訓</p>
+	<p class="secondtext">幹你老師欠教訓?</p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.0-9/18222429_1297157053713753_6009064844499632391_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=2ab66f1c5be0fb02bc5577cc5c982f38&oe=5D0BE7C7" alt="幹訓" ></p>
+	
+	
+		
 	<div class="contact">
 		<div class="box">
 			<a href="https://www.facebook.com/profile.php?id=100000333806344"><img src="http://tallerpalomares.ucoz.es/modulo_facebook/facebook.png"width="100" height="100"></a>
@@ -35,5 +66,6 @@
 		<div class="box">
 		<a href="https://github.com/Gangster69"><img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280"width="100" height="100"></a>
 		</div>
+	</div>
 </body>
 </html>
