--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     		color:#556b2f;
 	}
 	.secondtext{
-		text-align:left;
+		text-align:center;
    		color: #556b2f;
    		font-family: Microsoft JhengHei;
    		font-size : 16px
@@ -40,19 +40,19 @@
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">1.輔遊</p>
 	<p class="secondtext">新生的第一個活動就是參觀輔大;</p>
-	<p class="secondtext"><img src="https://scontent.ftpe8-4.fna.fbcdn.net/v/t1.0-9/20882100_1774420655921039_931510704321879336_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe8-4.fna&oh=f8361b857fdbbe1e201a34157991c61c&oe=5D13385C" alt="輔遊" ></p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-4.fna.fbcdn.net/v/t1.0-9/20882100_1774420655921039_931510704321879336_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe8-4.fna&oh=f8361b857fdbbe1e201a34157991c61c&oe=5D13385C" alt="輔遊" width="960" height="682" ></p>
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">2.宿營</p>
 	<p class="secondtext">帶領小竹認識大家</p>
-	<p class="secondtext"><img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.0-9/21192614_1788246057871832_5954825968258088738_n.jpg?_nc_cat=105&_nc_ht=scontent.ftpe8-1.fna&oh=3259010592b55f5b8c579496c842ac8a&oe=5D1CADF2" alt="宿營" ></p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-1.fna.fbcdn.net/v/t1.0-9/21192614_1788246057871832_5954825968258088738_n.jpg?_nc_cat=105&_nc_ht=scontent.ftpe8-1.fna&oh=3259010592b55f5b8c579496c842ac8a&oe=5D1CADF2" alt="宿營" width="960" height="682"></p>
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">3.返服</p>
 	<p class="secondtext">到偏鄉教小朋友</p>
-	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t31.0-8/27710194_1972363256126777_2568034353396234249_o.jpg?_nc_cat=100&_nc_ht=scontent.ftpe8-2.fna&oh=d60d9edd9ab1cd080a885e629eab26ac&oe=5D0A761E" alt="返服" ></p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t31.0-8/27710194_1972363256126777_2568034353396234249_o.jpg?_nc_cat=100&_nc_ht=scontent.ftpe8-2.fna&oh=d60d9edd9ab1cd080a885e629eab26ac&oe=5D0A761E" alt="返服" width="960" height="682"></p>
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">3.幹訓</p>
 	<p class="secondtext">幹你老師欠教訓?</p>
-	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.0-9/18222429_1297157053713753_6009064844499632391_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=2ab66f1c5be0fb02bc5577cc5c982f38&oe=5D0BE7C7" alt="幹訓" ></p>
+	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.0-9/18222429_1297157053713753_6009064844499632391_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=2ab66f1c5be0fb02bc5577cc5c982f38&oe=5D0BE7C7" alt="幹訓" width="960" height="682" ></p>
 	
 	
 		
