--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<p class="secondtext">到偏鄉教小朋友</p>
 	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t31.0-8/27710194_1972363256126777_2568034353396234249_o.jpg?_nc_cat=100&_nc_ht=scontent.ftpe8-2.fna&oh=d60d9edd9ab1cd080a885e629eab26ac&oe=5D0A761E" alt="返服" width="960" height="682"></p>
 	<p class="secondtext">&nbsp;</p>
-	<p class="secondtext">3.幹訓</p>
+	<p class="secondtext">4.幹訓</p>
 	<p class="secondtext">幹你老師欠教訓?</p>
 	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.0-9/18222429_1297157053713753_6009064844499632391_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=2ab66f1c5be0fb02bc5577cc5c982f38&oe=5D0BE7C7" alt="幹訓" width="960" height="682" ></p>
 	
@@ -67,5 +67,16 @@
 		<a href="https://github.com/Gangster69"><img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280"width="100" height="100"></a>
 		</div>
 	</div>
+<form action="join">
+    	<input id="y" type="radio" name="play">
+    	<label for="y">輔遊</label>
+	<input id="y" type="radio" name="play">
+    	<label for="y">宿營</label>
+	<input id="y" type="radio" name="play">
+    	<label for="y">返服</label>
+    	<input id="y" type="radio" name="play">
+    	<label for="y">幹訓</label>
+    	 <input type="button" value="submit" onclick="location.href='https://www.facebook.com/18thchumiao/'">
+ </form>
 </body>
 </html>
