--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<p class="firsttext">就來聊聊各個活動八八八八</p>
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">1.輔遊</p>
-	<p class="secondtext">新生的第一個活動就是參觀輔大;</p>
+	<p class="secondtext">新生的第一個活動就是參觀輔大</p>
 	<p class="secondtext"><img src="https://scontent.ftpe8-4.fna.fbcdn.net/v/t1.0-9/20882100_1774420655921039_931510704321879336_n.jpg?_nc_cat=104&_nc_ht=scontent.ftpe8-4.fna&oh=f8361b857fdbbe1e201a34157991c61c&oe=5D13385C" alt="輔遊" width="960" height="682" ></p>
 	<p class="secondtext">&nbsp;</p>
 	<p class="secondtext">2.宿營</p>
