--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
    		font-family: Microsoft JhengHei;
    		font-size : 16px
 	}
-
+	.lasttext{
+		text-align:center;
+	}
 </style>
 
 </head>
@@ -67,6 +69,7 @@
 		<a href="https://github.com/Gangster69"><img src="https://avatars3.githubusercontent.com/u/9919?v=3&s=280"width="100" height="100"></a>
 		</div>
 	</div>
+<div class="lasttext">
 <form action="join">
     	<input id="y" type="radio" name="play">
     	<label for="y">輔遊</label>
@@ -78,5 +81,6 @@
     	<label for="y">幹訓</label>
     	 <input type="button" value="submit" onclick="location.href='https://www.facebook.com/18thchumiao/'">
  </form>
+</div>
 </body>
 </html>
