--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
    		font-size : 16px
 	}
 	.lasttext{
+	
 		text-align:center;
+	}
+	.last2text{
+		font-weight:bold;
 	}
 </style>
 
@@ -57,6 +61,9 @@
 	<p class="secondtext"><img src="https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.0-9/18222429_1297157053713753_6009064844499632391_n.jpg?_nc_cat=103&_nc_ht=scontent.ftpe8-2.fna&oh=2ab66f1c5be0fb02bc5577cc5c982f38&oe=5D0BE7C7" alt="幹訓" width="960" height="682" ></p>
 	
 <div class="lasttext">
+	<div class="last2text">
+	<div>點選了解詳情</div>
+	</div>
 	<form action="join">
     		<input id="y" type="radio" name="play">
     		<label for="y">輔遊</label>
